<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:layout_marginRight="5px">
    <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:text="@string/maintenancedata_label" android:id="@+id/maintenanceDataLabel"></TextView>
    <TableLayout android:layout_height="wrap_content" android:id="@+id/tableLayout1" android:layout_width="match_parent">
        <TableRow android:id="@+id/tableRow1" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:text="@string/pruned" android:id="@+id/pruned_label"></TextView>
            <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/blank_label" android:id="@+id/prunedCheck"></CheckBox>
        </TableRow>
        <TableRow android:layout_height="wrap_content" android:id="@+id/tableRow2" android:layout_width="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/TextView01" android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/shocked"></TextView>
            <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/blank_label" android:id="@+id/shockCheck"></CheckBox>
        </TableRow>
        <TableRow android:id="@+id/tableRow4" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ImageView android:maxHeight="2px" android:layout_width="wrap_content" android:maxWidth="2px" android:src="@drawable/icon" android:layout_height="wrap_content" android:id="@+id/maintenancePhoto"></ImageView>
            <Button android:layout_width="wrap_content" android:onClick="takePhoto" android:layout_height="wrap_content" android:text="@string/takephoto_button_label" android:id="@+id/maintenancePhotoButton"></Button>
        </TableRow>
        <TableRow android:id="@+id/tableRow5" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:text="@string/addnotes" android:id="@+id/notesText"></TextView>
        </TableRow>
        <TableRow android:id="@+id/tableRow6" android:layout_width="wrap_content" android:layout_height="wrap_content">
        </TableRow>
    </TableLayout>
    <EditText android:inputType="textMultiLine" android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/maintenanceNotesEdit"></EditText>
    <Button android:id="@+id/button1" android:layout_height="wrap_content" android:text="@string/savedata" android:layout_width="match_parent" android:onClick="saveMaintenanceData"></Button>
</LinearLayout>